[package]
name = "human-panic"
version = "0.2.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/human-panic"
homepage = "https://github.com/yoshuawuyts/human-panic"
documentation = "https://docs.rs/human-panic"
description = "Panic messages for humans"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>", 
           "Pascal Hertleif <killercup@gmail.com>",
           "Katharina Fey <kookie@spacekookie.de>"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
termcolor = "0.3"
tempdir = "0.3"
uuid = { version = "0.6", features = ["v4"] }
serde_derive = "1.0"
toml = "0.4"
serde = "1.0"
failure = "0.1"
os_type = "2.0"

[features]
nightly = []
